--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Monad Testnet Faucet</title>
+  <title>Monpool Faucet</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
 </head>
 <body>
   <main class="main">
-    <h1>💧 Monad Testnet Faucet</h1>
+    <h1>💧Monpool</h1>
     <p class="subtitle">Claim Testnet Tokens<br/>You can claim again every 24hrs</p>
 
     <input id="walletAddress" class="input" type="text" placeholder="Paste your wallet address" />
