--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Monpool Faucet</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
   <main class="main">
