--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       document.body.appendChild(s);
     }
   </script>
+<div class="logo-container">
+  <img src="logomon.png" alt="Monad Logo" class="logo" />
+</div>
 
   <script src="script.js"></script>
 </body>
