--- a/index.html
+++ b/index.html
@@ -43,5 +43,87 @@
   </script>
 
   <script src="script.js"></script>
+// script.js
+  </script>
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+import { getDatabase, ref, get, set } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js";
+
+// Firebase init
+const firebaseConfig = {
+  apiKey: "AIzaSyBJC8jBpf4RJcrjAhgYumUmYzlOxma-ojk",
+  authDomain: "flappydak.firebaseapp.com",
+  databaseURL: "https://flappydak-default-rtdb.firebaseio.com",
+  projectId: "flappydak",
+  storageBucket: "flappydak.firebasestorage.app",
+  messagingSenderId: "189314171470",
+  appId: "1:189314171470:web:4c3a9068fdb909b147791f",
+  measurementId: "G-R0LF3F59W9"
+};
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
+
+const clientId = "YOUR_DISCORD_CLIENT_ID";
+const redirectUri = "http://localhost:3000/callback"; // change to your domain
+
+// Step 1: When Claim button clicked → redirect to Discord
+document.getElementById("claimBtn").addEventListener("click", () => {
+  const authUrl = `https://discord.com/api/oauth2/authorize?client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&response_type=code&scope=identify`;
+  window.location.href = authUrl;
+});
+
+// Step 2: Handle callback from Discord
+async function handleCallback() {
+  const params = new URLSearchParams(window.location.search);
+  if (!params.has("code")) return;
+
+  const code = params.get("code");
+
+  // Exchange code → access token
+  const tokenRes = await fetch("https://discord.com/api/oauth2/token", {
+    method: "POST",
+    headers: { "Content-Type": "application/x-www-form-urlencoded" },
+    body: new URLSearchParams({
+      client_id: clientId,
+      client_secret: "YOUR_DISCORD_CLIENT_SECRET",
+      grant_type: "authorization_code",
+      code,
+      redirect_uri: redirectUri,
+      scope: "identify"
+    })
+  });
+  const tokenData = await tokenRes.json();
+  const accessToken = tokenData.access_token;
+
+  // Get user info
+  const userRes = await fetch("https://discord.com/api/users/@me", {
+    headers: { Authorization: `Bearer ${accessToken}` }
+  });
+  const user = await userRes.json();
+  const discordId = user.id;
+  const username = `${user.username}#${user.discriminator}`;
+
+  // Step 3: Check Firebase for cooldown
+  const userRef = ref(db, `claims/${discordId}`);
+  const snap = await get(userRef);
+
+  const now = Date.now();
+  if (snap.exists()) {
+    const lastClaim = snap.val().lastClaim;
+    if (now - lastClaim < 24 * 60 * 60 * 1000) {
+      document.getElementById("status").innerText =
+        `⏳ ${username}, you must wait before claiming again.`;
+      return;
+    }
+  }
+
+  // Step 4: Store claim time
+  await set(userRef, { username, lastClaim: now });
+
+  // Step 5: Trigger faucet logic
+  document.getElementById("status").innerText = `✅ Claim successful for ${username}!`;
+}
+
+handleCallback();
+  </script>
 </body>
 </html>
