--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <input id="walletAddress" class="input" type="text" placeholder="Paste your wallet address" />
 
-    <button id="claimBtn" class="btn">Claim</button>
+    <button id="claimBtn" disabled class="btn">Claim</button>
 
     <p id="status" class="status"></p>
 
